--- a/ytm-koa/package.json
+++ b/ytm-koa/package.json
@@ -24,6 +24,8 @@
     "koa-router": "^12.0.1",
     "koa-stream": "^0.2.0",
     "mongoose": "^8.4.4",
-    "music-metadata": "^8.3.0"
+    "music-metadata": "^8.3.0",
+    "passport": "0.5.0",
+    "passport-local": "^1.0.0"
   }
 }
